# discord-irc-bridge

./: .gitignore  Cargo.toml
src/: main.rs
