[package]
name = "discord-irc-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
irc = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
serenity = { version = "0.11.5", features = ["rustls_backend", "standard_framework", "framework"] }
tracing-subscriber = "0.3.17"
log = "0.4.18"
tracing = "0.1.37"
toml = "0.7.4"
serde = { version = "1.0.164", features = ["derive"] }
crc32fast = "1.3.2"
